--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ scikit-learn>=1.5
 numba>=0.59
 python-igraph>=0.11
 leidenalg>=0.10
+scvi-tools>=1.0,<2
+torch>=2.2; platform_system!="Darwin"  # torch is pulled by scvi-tools, this line helps Cloud resolvers
