--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ python-igraph>=0.11
 leidenalg>=0.10
 scvi-tools>=1.0,<2
 torch>=2.2; platform_system!="Darwin"  # torch is pulled by scvi-tools, this line helps Cloud resolvers
-#louvain>=0.8
+louvain>=0.8
