--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ scvi-tools>=1.0,<2
 torch>=2.2; platform_system!="Darwin"  # torch is pulled by scvi-tools, this line helps Cloud resolvers
 louvain>=0.8
 celltypist>=1.6.0
+scvelo>=0.3.3
